# toio-bc

./: .gitignore  README.md  config.example.yaml  pyproject.toml
lerobot_operator/: __init__.py  episode_recorder.py  mixing.py  run_operator.py  toio_driver.py  websocket_leader.py
models/: policy.example.pth
scripts/: generate_dummy_data.py  inference.py  operator.py  replay.py  replay_dataset.py  run_operator.py  run_server.py  train.py
server/: __init__.py  main.py
server/static/: controller.js  index.html  styles.css
src/toio_bc/: __init__.py  inference.py  operator.py  replay.py  train.py
src/toio_bc/core/: episode_recorder.py
