[project]
name = "lerobot-toio-webctrl"
version = "0.1.0"
description = "Behavior cloning for toio using LeRobot framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot>=0.4.0",
    "fastapi",
    "uvicorn[standard]",
    "websockets>=11",
    "pyyaml",
    "bleak",
    "numpy",
    "pillow",
    "torch>=2.0.0",
]

[tool.uv]
package = false
